--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/favicon-32x32.png"
+      href="./assets/favicon.ico"
     />
     <link rel="apple-touch-icon" href="./assets/favicon.ico" />
-    <title>Ref Finance</title>
+    <title>Pangolin</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
